# ws2812-driver

./: 50-leds.rules  CMakeLists.txt  Makefile  README.md  ws2812.c  ws2812.dtso  ws2812.h  ws2812ctl.py
